--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .DS_Store
 
+out/
 
 *.aux
 *.glo
@@ -27,7 +28,4 @@
 *.fdb_latexmk
 *.fls
 *.pdf
-!/figures/*.pdf
 
-# Ignore node_modules
-node_modules/
