--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,31 +1,186 @@
 {
-    "latex-workshop.latex.recipes": [
-        {
-            "name": "latexmk (latexmkrc)",
-            "tools": [
-                "latexmk"
-            ]
-        }
-    ],
-    "latex-workshop.latex.tools": [
-        {
-            "name": "latexmk",
-            "command": "latexmk",
-            "args": [
-                "%DOC%",
-                "-silent"
-            ],
-            "env": {}
-        }
-    ],
-    "latex-workshop.latex.rootFile.useSubFile": true,
-    "latex-workshop.intellisense.file.base": "both",
-    "latex-workshop.docker.enabled": true,
-    "latex-workshop.docker.image.latex": "pddg/latex:3.0.0",
-    "latex-workshop.intellisense.package.enabled": true,
-    "latex-workshop.latex.clean.subfolder.enabled": true,
-    "latex-workshop.latex.autoClean.run": "onFailed",
-    "latex-workshop.synctex.afterBuild.enabled": true,
-    "latex-workshop.view.pdf.internal.synctex.keybinding": "double-click",
-    "latex-workshop.view.pdf.viewer": "tab",
+	"files.autoSave": "afterDelay",
+	"editor.formatOnSave": true,
+	"editor.formatOnPaste": true,
+	"editor.defaultFormatter": "James-Yu.latex-workshop",
+	"editor.wordWrap": "on",
+	"editor.wordSeparators": "./\\()\"'-:,.;<>~!@#$%^&*|+=[]{}`~?。．、，（）「」『』［］｛｝《》てにをはがのともへでや ",
+	"editor.tabSize": 2,
+	"editor.insertSpaces": true,
+	"editor.detectIndentation": false,
+	"editor.suggestSelection": "recentlyUsedByPrefix",
+	"editor.suggest.snippetsPreventQuickSuggestions": false,
+	"editor.quickSuggestions": {
+		"other": true,
+		"comments": false,
+		"strings": false
+	},
+	"editor.bracketPairColorization.enabled": true,
+	"editor.unicodeHighlight.invisibleCharacters": true,
+	"editor.unicodeHighlight.allowedCharacters": {
+		"，": true,
+		"．": true,
+		"！": true,
+		"？": true,
+		"［": true,
+		"］": true,
+		"｛": true,
+		"｝": true,
+		"＜": true,
+		"＞": true
+	},
+
+  
+	// latex-workshop.view.pdf.viewer: PDF ビューアの開き方
+	// VSCode 自体には PDF ファイルを閲覧する機能が備わっていないが、LaTeX Workshop にはその機能が備わっている。
+	// "tab" オプションを指定すると、今開いているエディタを左右に分割し、右側に生成されたPDFを表示するようにしてくれる
+	"latex-workshop.view.pdf.viewer": "tab",
+	"latex-workshop.view.pdf.zoom": "page-width",
+	"latex-workshop.view.pdf.ref.viewer": "auto",
+	"latex-workshop.intellisense.file.base": "both",
+	"latex-workshop.docker.enabled": true,
+	"latex-workshop.docker.image.latex": "pddg/latex:3.0.0",
+	"latex-workshop.intellisense.package.enabled": true,
+	"latex-workshop.synctex.afterBuild.enabled": true,
+	"latex-workshop.view.pdf.internal.synctex.keybinding": "double-click",
+	"latex-workshop.message.latexlog.exclude": [
+    "(Font shape `(JY1|JT1|JY2|JT2|OT1)(/.*)'.*|Some font shapes were not available.*)"
+	],
+  "latex-workshop.latex.clean.subfolder.enabled": true,
+  "latex-workshop.latex.autoClean.run": "onBuilt",
+  "latex-workshop.latex.rootFile.useSubFile": true,
+	"latex-workshop.latex.autoBuild.run": "onSave",
+	"latex-workshop.latex.tools": [
+		{
+			"name": "ptex2pdf",
+			"command": "ptex2pdf",
+			"args": [
+				"-l",
+				"-ot",
+				"-kanji=utf8 -synctex=1",
+				"-interaction=nonstopmode",
+				"-halt-on-error",
+				"-file-line-error",
+				"-output-directory",
+				"%OUTDIR%",
+				"%DOC%"
+			]
+		},
+		{
+			"name": "ptex2pdf (uplatex)",
+			"command": "ptex2pdf",
+			"args": [
+				"-l",
+				"-u",
+				"-ot",
+				"-kanji=utf8 -synctex=1",
+				"-interaction=nonstopmode",
+				"-halt-on-error",
+				"-file-line-error",
+				"-output-directory",
+				"%OUTDIR%",
+				"%DOC%"
+			]
+		},
+		{
+			"name": "bibtex",
+			"command": "bibtex",
+			"args": ["%DOCFILE%"]
+		},
+		{
+			"name": "pbibtex",
+			"command": "pbibtex",
+			"args": ["%DOCFILE%", "-kanji=utf8"]
+		},
+		{
+			"name": "latexdiff-vc(HEAD)",
+			"command": "sh",
+			"args": ["/workdir/.bin/latexdiff-commit.sh", "HEAD", "%DOCFILE%"]
+		},
+		{
+			"name": "latexdiff-vc(lastTag)",
+			"command": "sh",
+			"args": ["/workdir/.bin/latexdiff-lastTag.sh", "%DOCFILE%"]
+		},
+		{
+			"name": "replace-latexdiff-def",
+			"command": "sh",
+			"args": ["/workdir/.bin/replace-latexdiff-def.sh", "%DOCFILE%.tex"]
+		}
+	],
+	//"latex-workshop.latex.recipe.default": "lastUsed",
+	"latex-workshop.latex.recipes": [
+		{
+			"name": "pt2p-pt2p",
+			"tools": [
+				"ptex2pdf", //タイプセットに使うtoolの名前
+				"ptex2pdf"
+			]
+		},
+		{
+			"name": "pt2p-bib-pt2p-pt2p",
+			"tools": ["ptex2pdf", "pbibtex", "ptex2pdf", "ptex2pdf"]
+		},
+		{
+			"name": "mkDiffHEAD",
+			"tools": [
+				"latexdiff-vc(HEAD)",
+				"replace-latexdiff-def" //latexdiffの定義を置き換える．単純なコンパイルのためなら本来は不要．
+			]
+		},
+		{
+			"name": "mkDiffTAG",
+			"tools": [
+				"latexdiff-vc(lastTag)",
+				"replace-latexdiff-def" //latexdiffの定義を置き換える．単純なコンパイルのためなら本来は不要．
+			]
+		}
+	],
+
+	// latex-workshop.latex.magic.args: マジックコメント付きの LaTeX ドキュメントをビルドする設定
+	// '%!TEX' で始まる行はマジックコメントと呼ばれ、LaTeX のビルド時にビルドプログラムに解釈され、
+	// プログラムの挙動を制御する事ができる。
+	// 参考リンク: https://blog.miz-ar.info/2016/11/magic-comments-in-tex/
+	"latex-workshop.latex.magic.args": [
+		"-f",
+		"-gg",
+		"-pv",
+		"-synctex=1",
+		"-interaction=nonstopmode",
+		"-file-line-error",
+		"%DOC%"
+	],
+
+	// latex-workshop.latex.clean.fileTypes: クリーンアップ時に削除されるファイルの拡張子
+	// LaTeX 文書はビルド時に一時ファイルとしていくつかのファイルを生成するが、最終的に必要となるのはPDF ファイルのみである場合などが多い。
+	// また、LaTeX のビルド時に失敗した場合、失敗時に生成された一時ファイルの影響で、修正後のビルドに失敗してしまう事がよくある。
+	// そのため、一時的なファイルを削除する機能 (クリーンアップ) が LaTeX Workshop には備わっている。
+	"latex-workshop.latex.clean.fileTypes": [
+		"*.aux",
+		"*.bbl",
+		"*.blg",
+		"*.idx",
+		"*.ind",
+		"*.lof",
+		"*.lot",
+		"*.out",
+		//"*.toc",  // 目次生成のため除外
+		"*.acn",
+		"*.acr",
+		"*.alg",
+		"*.glg",
+		"*.glo",
+		"*.gls",
+		"*.ist",
+		"*.fls",
+		"*.log",
+		"*.fdb_latexmk",
+		//"*.synctex.gz", // tex-pdf間の同期のため除外
+		"_minted*",
+		"*.nav",
+		"*.snm",
+		"*.vrb"
+	],
+	// コンパイルしたPDFの出力先を指定する
+	"latex-workshop.latex.outDir": "%DIR%/out"
 }
