update: DevContainer内でlintを使用可能にした

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,5 +12,6 @@
 	},
 	"service": "latex-template-ja",
 	"workspaceFolder": "/workdir",
+  "postCreateCommand": "npm install",
 	"shutdownAction": "stopCompose"
 }
